<resources>
    <string name="app_name">CommonPlayground</string>
    <string name="refreshed">Successfully refreshed!</string>
    <!-- Strings related to navigation -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Common Playground</string>
    <string name="nav_header_subtitle" translatable="false">CommonPlaygroundApp@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_dashboard" translatable="false">Dashboard</string>
    <string name="menu_mySessions">My Sessions</string>
    <string name="menu_messages">Messages</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_friendlist">Friendlist</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_help">Help</string>
    <string name="menu_faq">FAQ</string>
    <string name="menu_contactAdmin">Contact Admin</string>
    <string name="tooltip_tbi">Coming soon!</string>
    <string name="action_search">Search</string>
    <!-- Strings related to AddSession -->
    <string name="new_title">Title</string>
    <string name="new_game">Game</string>
    <string name="new_place">Post Code</string>
    <string name="new_date">Date</string>
    <string name="new_time">Time</string>
    <string name="new_players">How many Players?</string>
    <string name="new_description">Description</string>
    <string name="new_button">Publish</string>
    <string name="new_response_fine">Your Session is saved!</string>
    <string name="new_error">Something went wrong! Please try it again later.</string>
    <string-array name="game_types">
        <item>Online</item>
        <item>Offline</item>
    </string-array>
    <string-array name="add_online_genres">
        <item>MMO RPG</item>
        <item>Shooter</item>
        <item>MOBA</item>
        <item>Strategy</item>
    </string-array>
    <string-array name="add_offline_genres">
        <item>Board Game</item>
        <item>Card Game</item>
        <item>Pen and Paper</item>
        <item>Outdoors Activity</item>
    </string-array>
    <string-array name="search_online_genres">
        <item>Any genre</item>
        <item>MMO RPG</item>
        <item>Shooter</item>
        <item>MOBA</item>
        <item>Strategy</item>
    </string-array>
    <string-array name="search_offline_genres">
        <item>Any genre</item>
        <item>Board Game</item>
        <item>Card Game</item>
        <item>Pen and Paper</item>
        <item>Outdoors Activity</item>
    </string-array>
    <string name="error_too_long">This input is too long</string>
    <string name="error_wrong_place">Please enter a valid post code</string>
    <!-- Strings related to login and register -->
    <string name="username_double_error">This username already exists.</string>
    <string name="username_error">This email does not exist.</string>
    <string name="email_double_error">This email is already registered.</string>
    <string name="registration_success">Your account has been registered.</string>
    <string name="login_error">Email or password wrong.</string>
    <string name="title_activity_login">Login</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_confirm">Password (confirm)</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register">Register</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_short_password">This password is too short</string>
    <string name="error_long_password">This password is too long</string>
    <string name="error_invalid_password">The password can only consist of letters, numbers and those characters: @ * # ! ? . - _</string>
    <string name="error_invalid_password_confirm">This is not the same password</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="title_activity_registration">Register</string>
    <string name="title_activity_session_detail" translatable="false">Session Detail</string>
    <string name="title_activity_my_sessions">My Sessions</string>
    <string name="tab_text_1">Hosted</string>
    <string name="tab_text_2">Joined</string>
    <string name="tab_text_3">Pending</string>
    <string name="title_message_list">Messages</string>
    <string name="title_message_detail" translatable="false">Message Detail</string>
    <string name="message_button_delete">Delete</string>
    <string name="message_button_accept">Accept</string>
    <string name="message_button_reject">Reject</string>
    <string name="join_error_full">This session is already full</string>
    <string name="join_error_joined">You have already joined this session</string>
    <string name="join_error_pending">You have already requested to join this session</string>
    <string name="join_success">Your request to join this session has been sent.</string>
    <string name="join_button_join">Join</string>
    <string name="join_button_leave">Leave</string>
    <string name="leave_error">You cannot leave your own sessions.</string>
    <string name="leave_success">You are no longer part of this session.</string>
    <string name="leave_retracted">You have retracted your join request.</string>
    <string name="new_message">There are new messages in your inbox.</string>
    <string name="confirm" translatable="false">OK</string>
    <string name="title_activity_search">Search</string>
    <string name="btn_search">Search</string>
    <string name="title_activity_add_session">New Session</string>
    <string name="title_activity_search_result">Search Result</string>
    <string name="participants">Participants:&#160;</string>
    <string name="title_activity_send_message">Send Message</string>
    <string name="send_message_username">Recipient</string>
    <string name="send_message_title">Message title</string>
    <string name="send_message_message">Message</string>
    <string name="send_message_button">Send</string>
    <string name="send_message_success">Your message has been sent.</string>
    <string name="send_message_failure">Recipient username unkown</string>
</resources>
